--- a/static/css/projects.css
+++ b/static/css/projects.css
@@ -112,7 +112,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding-top: 50px;
+    padding-top: none;
 }
 
 .page-text {
@@ -129,12 +129,16 @@ body {
 .content {
     position: relative;
     padding: 20px;
-    width: 50%;
+    width: 600px;
+    height: 400px;
     border-radius: 10px;
     background: none;
     z-index: 0;
     display: flex;
     font-size: 100%;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
     transition: transform 0.5s ease, box-shadow 0.5s ease;
 }
 
