--- a/templates/projects.html
+++ b/templates/projects.html
@@ -61,13 +61,17 @@
     </script>
     <div class="page-row-section">
         <div class="page-column-section">
-            <div class="selector-content">
-                <div class="content default-mode">
-                    <h1>Fistbump</h1>
-                    <p class="page-text"> Fistbump is an all ......... . . .  .. .  . .. . .  . . . . .. </p>
-                    img src="{{ url_for('static', filename='images/AAlogo.png')}}">
+            <a href="/fistbump">
+                <div class="selector-content">
+                    <div class="content default-mode">
+                        <div class="page-column-section">
+                            <h1 class="page-text">Fistbump</h1>
+                            <p class="page-text"> Fistbump is an all ......... . . .  .. .  . .. . .  . . . . .. </p>
+                            <img src="{{ url_for('static', filename='images/AAlogo.png')}}">
+                        </div>
+                    </div>
                 </div>
-            </div>
+            </a>
         </div>
     </div>
     <div class="page-row-section">
