--- a/templates/projects.html
+++ b/templates/projects.html
@@ -26,7 +26,7 @@
                     <div class="selector-content">
                         <div class="content default-mode">
                             <div class="page-column-section">
-                                <h1 class="page-text">Fistbump</h1>
+                                <h1 class="page-text" style="font-size: 30px;">Fistbump</h1>
                                 <p class="page-text"> Social Media Project</p>
                                 <img src="{{ url_for('static', filename='images/fistbumpHome.jpeg')}}">
                             </div>
