--- a/static/css/about.css
+++ b/static/css/about.css
@@ -108,10 +108,12 @@ body {
 }
 
 .page-text {
+    width: 90%;
     align-items: center;
     justify-content: center;
     text-align: left;
     line-height: 1.7;
+    font-size: 15px;
 }
 
 .background-change{
@@ -125,20 +127,23 @@ a {
 
 /* Image */
 .image-container {
-    margin-top: 100px;
     overflow-x: hidden;
     max-width: 768px;
     margin: 0 auto;
+
 }
 
 .image-wrapper {
+    margin-top: 50px;
+    margin-bottom: 70px;
+    height: 100%;
     display: grid;
     grid-auto-flow: column;
     grid-auto-columns: calc((100% - (1.5rem * (var(--per-view) - 1))) / var(--per-view));
     grid-gap: 1.5rem;
     position: relative;
     left: 0;
-    transition: 0.3s;
+    transition: transform 1s;
 }
 
 .image-wrapper > * {
@@ -156,8 +161,14 @@ a {
 
 .revolving-img {
     border-radius: 0.5rem;
-    box-shadow: 0 3px 10px rgb(0, 0, 0, 0.15);
+    box-shadow: 0 3px 10px rgb(0, 0, 0, 0.45);
+}
 
+.center-image .revolving-img {
+    transition: transform 1s;
+    transform: scale(1.6); 
+    z-index: 2;
+    border-radius: 0.5rem;
 }
 
 .floating-img {
@@ -171,6 +182,7 @@ a {
 .floating-img:hover {
     cursor: pointer;
 }
+
 body {
     margin: 0;
     height: 100vh;
