--- a/templates/projects.html
+++ b/templates/projects.html
@@ -37,11 +37,13 @@
         </div>
         <div class="page-row-section">
             <div class="page-column-section">
-                <div class="selector-content">
-                    <div class="content default-mode">
-                        <p class="page-text"> I am currently trying to gain as much knowledge as I can while finding a passion that I truly love. I try to push my understanding of the world and the many facets between. I believe that with consistency, effort, and time, any amout of personal growth can be attained.</p>
+                <a href="/stockSentiment">
+                    <div class="selector-content">
+                        <div class="content default-mode">
+                            <p class="page-text"> I am currently trying to gain as much knowledge as I can while finding a passion that I truly love. I try to push my understanding of the world and the many facets between. I believe that with consistency, effort, and time, any amout of personal growth can be attained.</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
         </div>
         <div class="page-row-section">
