--- a/templates/IndividualProjects/stockSentiment.html
+++ b/templates/IndividualProjects/stockSentiment.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/IndividualProjects/fistbump.css') }}">
-    <title>Fistbump</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/IndividualProjects/stockSentiment.css') }}">
+    <title>Stock Sentiment</title>
 </head>
 <body>
     <div> 
@@ -19,20 +19,19 @@
         </header>
         <main>
             <div style="margin-top: 50px; text-align: center;">
-                <img class="img-background" src="{{ url_for('static', filename='images/fistbumpHome.jpeg') }}" alt="fistbump home page">
+                
             </div>
 
             <div class="selector-content">
                 <div class="page-row-section">
                     <div style="margin-top: 100px; margin-bottom: 100px; margin-left: 350px; margin-right: 350px;">
-                        <p1 class="page-text"> Fistbump is a social networking app that links you with other users. Each day, you recieve 1 random user, with whom you must meet up with in person, and take a picture with them. After this, your image is shared to the wall, where everyone can see connections being made with their friends. This short act of meeting up to take your Fistbump together finishes the hardest step of meeting new people: Breaking the ice. After meeting each other, the two users are physically close and have talked, and this small connection could lead to more conversations, activities done together, shared phone numbers, and eventually, a new friendship.</p1>
+                        
                     </div>
                 </div>
             </div>
             <div class="selector-content">
                 <div class="page-row-section" style="margin-bottom: 100px;">
-                    <img style="margin-right: 100px;" class="img-vertical" src="{{ url_for('static', filename='images/fistbumpProfile.jpeg') }}" alt="fistbump profile page">
-                    <img style="margin-left: 100px;" class="img-vertical" src="{{ url_for('static', filename='images/fistbumpPhoto.jpeg') }}" alt="fistbump picture page">>
+                    
                 </div>
             </div>
         </main>
