--- a/templates/projects.html
+++ b/templates/projects.html
@@ -11,7 +11,7 @@
         <a href="/">
             <img class="option-logo" src="{{ url_for('static', filename='images/AAlogo.png') }}" alt="logo">
         </a>
-        <nav class="nav-bar">
+        <nav class="nav-bar" style="margin-left: 60%;">
             <a href="/about" class="nav-text">About Me</a>
             <a href="/projects" class="nav-text">Projects</a>
         </nav>
