--- a/static/css/about.css
+++ b/static/css/about.css
@@ -1,6 +1,6 @@
 
 .header {
-    background: rgb(255, 255, 255, 0.95);
+    background: rgb(255, 255, 255, 0.97);
     position: fixed;
     left: 0;
     top: 0;
@@ -12,12 +12,12 @@
     /*box-shadow: 0 3px 10px rgb(0, 0, 0, 0.15);*/
     display: flex;
     flex-direction: row;
-    animation: blink var(--animation-time-h) infinite;
+    /*animation: blink var(--animation-time-h) infinite;*/
 }
 
 .header-scrolled {
-    background: rgb(255, 255, 255, 0.95);
-    box-shadow: 0 3px 10px rgb(0, 0, 0, 0.15);
+    background: rgb(255, 255, 255, 0.98);
+    box-shadow: 0 3px 10px rgb(0, 0, 0, 0.25);
     position: fixed;
     left: 0;
     top: 0;
@@ -25,6 +25,7 @@
     padding: 20px 100px;
     z-index: 2;
     animation: none;
+    transform: scale(1.0035);
 }
 
 .nav-bar {
@@ -104,7 +105,7 @@ body {
 .content {
     position: relative;
     display: flex;
-    width: 70%;
+    width: 65%;
     align-items: center;
     justify-content: center;
     margin: 0 auto;
@@ -237,13 +238,9 @@ div.d {
     --animation-time-d: 13s;
 }
 
-.remove-animation {
-    animaton: none !important;
-}
-
 @keyframes bounce1 {
     0%, 100% {
-        transform: translateY(-400px);
+        transform: translateY(-410px);
     }
     50% {
         transform: translateY(var(--animation-height-a));
@@ -253,7 +250,7 @@ div.d {
 
 @keyframes bounce2 {
     0%, 100% {
-        transform: translateY(-400px);
+        transform: translateY(-410px);
     }
     50% {
         transform: translateY(var(--animation-height-b));
@@ -263,7 +260,7 @@ div.d {
 
 @keyframes bounce3 {
     0%, 100% {
-        transform: translateY(-400px);
+        transform: translateY(-410px);
     }
     50% {
         transform: translateY(var(--animation-height-c));
@@ -272,7 +269,7 @@ div.d {
 
 @keyframes bounce4 {
     0%, 100% {
-        transform: translateY(-400px);
+        transform: translateY(-410px);
     }
     50% {
         transform: translateY(var(--animation-height-d));
@@ -288,7 +285,7 @@ div.d {
     }
 }
 
-@keyframes blink {
+/*@keyframes blink {
     0%, 30%, 70%, 100% {
         box-shadow: none;
     }
@@ -296,4 +293,15 @@ div.d {
     50% {
         box-shadow: 0 3px 10px rgb(0, 0, 0, 0.15);
     }
+}*/
+
+#glowing-circle {
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    background-color: rgba(255, 255, 0, 0.2);
+    border-radius: 50%;
+    box-shadow: 0 0 35px rgba(255, 255, 0, 0.4), 0 0 45px rgba(255, 255, 0, 0.4), 0 0 55px rgba(255, 255, 0, 0.4);
+    pointer-events: none;
+    transform: translate(-50%, -50%);
 }
