--- a/static/css/projects.css
+++ b/static/css/projects.css
@@ -1,5 +1,5 @@
 .header {
-    background: rgb(246, 246, 246);
+    background: rgb(255, 255, 255, 0.97);
     position: fixed;
     left: 0;
     top: 0;
@@ -8,20 +8,22 @@
     padding: 20px 100px;
     z-index: 2;
     transition: all 0.4s;
-    box-shadow: 0 3px 10px rgb(0, 0, 0, 0.15);
+    /*box-shadow: 0 3px 10px rgb(0, 0, 0, 0.15);*/
     display: flex;
     flex-direction: row;
-    /*justify-content: space-between;*/
 }
 
 .header-scrolled {
-    background: rgb(246, 246, 246, 0.85);
+    background: rgb(255, 255, 255, 0.98);
+    box-shadow: 0 3px 10px rgb(0, 0, 0, 0.25);
     position: fixed;
     left: 0;
     top: 0;
     width: 100%;
     padding: 20px 100px;
     z-index: 2;
+    animation: none;
+    transform: scale(1.0035);
 }
 
 .nav-bar {
@@ -70,10 +72,10 @@
 .toggle-button {
     width: 150px;
     height: 33px;
-    margin-left: 50%;
+    margin-top: 20px;
     position: relative; 
     border: none;
-    background-color: white;
+    background-color: rgb(246,246,246);
     color: black;
     border-radius: 4px;
     box-shadow: inset 0 0 0 lightyellow;
@@ -244,3 +246,4 @@ img {
     0% { transform: translateX(0%); }
     100% { transform: translateX(-100%); }
 }
+
