--- a/templates/about.html
+++ b/templates/about.html
@@ -14,7 +14,7 @@
     ​<div id="glowing-circle"></div>
     <header class="header">
         <a href="/" class="nav-text"> Home </a>
-        <nav class="nav-bar" style="margin-left: 60%;">
+        <nav class="nav-bar">
             <a href="/about" class="nav-text">About Me</a>
             <a href="/projects" class="nav-text">Projects</a>
         </nav>
