--- a/static/css/IndividualProjects/fistbump.css
+++ b/static/css/IndividualProjects/fistbump.css
@@ -1,6 +1,5 @@
 .header {
-    background: rgb(246, 246, 246);
-    box-shadow: 0 3px 10px rgb(0, 0, 0, 0.15);
+    background: white;
     position: relative;
     left: 0;
     top: 0;
@@ -18,6 +17,7 @@
     display: flex;
     flex-direction: row;
     padding-right: 100px;
+    margin-left: 60%;
  
 }
 
@@ -111,6 +111,26 @@ a {
 .img-vertical {
     height: 600px;
     width: 300px;
+}
+
+#loading {
+    text-align: center;
+    padding: 10px;
+    font-size: 18px;
+}
+
+#buffer-zone {
+    height: 100vh;
+    background-color: white;
+    margin-bottom: 2px;
+}
+
+.slow-container {
+    position: relative;
+    margin-top: auto;
+    height: 10%;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.8);
 }
 
 @keyframes glow {
