--- a/static/css/about.css
+++ b/static/css/about.css
@@ -32,7 +32,7 @@
     display: flex;
     flex-direction: row;
     padding-right: 100px;
- 
+    margin-left: 60%
 }
 
 .nav-text {
@@ -296,12 +296,13 @@ div.d {
 }*/
 
 #glowing-circle {
+    z-index: 3;
     position: absolute;
     width: 30px;
     height: 30px;
-    background-color: rgba(255, 255, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.17);
     border-radius: 50%;
-    box-shadow: 0 0 35px rgba(255, 255, 0, 0.4), 0 0 45px rgba(255, 255, 0, 0.4), 0 0 55px rgba(255, 255, 0, 0.4);
+    box-shadow: 0 0 35px rgba(0, 0, 0, 0.35), 0 0 45px rgba(0, 0, 0, 0.35), 0 0 55px rgba(0, 0, 0, 0.35);
     pointer-events: none;
     transform: translate(-50%, -50%);
 }
